syntax = "proto3";

package api;

service Ping {
    rpc CheckIn(GreetMessage) returns (GreetMessage) {}
    rpc GetDate(RequestDate) returns (DateMessage) {}
}

message GreetMessage {
    string greeting = 1;
}

message RequestDate {
    string req = 1;
}

message DateMessage {
    int32 day = 1;
    int32 month = 2;
    int32 year = 3;
}


